Update release information

--- a/backend/resonite_communities/client/templates/index.html
+++ b/backend/resonite_communities/client/templates/index.html
@@ -464,21 +464,55 @@
               <h2>Changelog</h2>
 
               <div class="box">
-                  <div class="content">
-                    <strong>Release 3.2</strong>
-                    &nbsp;
-                    <small>2023-11-30</small>
-                    <br>
-                    <p>
-                      <ul>
-                        <li>Config var for facet url</li>
-                        <li>Fix external events update</li>
-                        <li>Fix date on web client (no hardcoded year)</li>
-                      </ul>
-                    </p>
-                  </div>
+                <div class="content">
+                  <strong>Release 4.0-beta</strong>
+                  &nbsp;
+                  <small>2024-11-20</small>
+                  <br>
+                  <p>
+                    <ul>
+                      <li>Completly rewrite the backend</li>
+                      <li>Dropped support for the Apollo bot for now.</li>
+                      <li>Prepare the front-end to be updated</li>
+                    </ul>
+                  </p>
+                  <strong>Beta release will not be tagged.</strong>
                 </div>
+              </div>
 
+              <div class="box">
+                <div class="content">
+                  <strong>Release 3.3</strong>
+                  &nbsp;
+                  <small>2024-03-18</small>
+                  <br>
+                  <p>
+                    <ul>
+                      <li>Add support for JSON collector</li>
+                      <li>Fix css import</li>
+                      <li>Fix Twitch schedule API parsing</li>
+                    </ul>
+                  </p>
+                </div>
+              </div>
+
+              <div class="box">
+                <div class="content">
+                  <strong>Release 3.2</strong>
+                  &nbsp;
+                  <small>2023-11-30</small>
+                  <br>
+                  <p>
+                    <ul>
+                      <li>Config var for facet url</li>
+                      <li>Fix external events update</li>
+                      <li>Fix date on web client (no hardcoded year)</li>
+                    </ul>
+                  </p>
+                </div>
+              </div>
+
+              <div class="box">
                 <div class="content">
                   <strong>Release 3.1</strong>
                   &nbsp;
