--- a/backend/resonite_communities/clients/web/templates/index.html
+++ b/backend/resonite_communities/clients/web/templates/index.html
@@ -307,7 +307,7 @@
                 <div class="card-content columns" style="background-image: url({{ event.session_image }});">
                   <div class="content column is-three-fifths">
                     <p class="subtitle">
-                      {{ event.name|parse|safe }}
+                      {{ event.description|parse|safe }}
                     </p>
                     <div class="more">
                       <p>
