--- a/backend/resonite_communities/clients/web/templates/index.html
+++ b/backend/resonite_communities/clients/web/templates/index.html
@@ -1,258 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>resonite-communities.com</title>
-    <link rel="icon" href="data:image/jpeg;base64,{{ logo | safe }}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
-    <!-- Bulma Version 0.9.0-->
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css'>
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/overlayscrollbars/1.9.1/css/OverlayScrollbars.min.css'>
-    <link rel='stylesheet' href='https://kingsora.github.io/OverlayScrollbars/etc/os-theme-thin-dark.css'>
-    <link rel='stylesheet' href="../css/prism.css">
-    <link rel="stylesheet" href="../css/cheatsheet.css">
-    <script src="https://kit.fontawesome.com/7dc3015a44.js" crossorigin="anonymous"></script>
-
-    <style>
-      .hero.is-small .hero-body {
-          padding: 0em 1.5rem;
-      }
-
-      .content h3.subsubtitle {
-        margin-top: -1.25rem;
-        color: rgba(240, 240, 240, 0.9);
-        font-size: 1.25em;
-      }
-      .logo {
-        float: left;
-        max-width: 7.5em;
-        padding-right: 1em;
-        top: -14px;
-        position: inherit;
-      }
-
-      .event, .stream {
-        margin-bottom: 2em;
-      }
-
-      .stream .button {
-        align-self: center;
-        margin: 1em;
-      }
-
-      .stream .card-header-title {
-        flex-direction: column;
-        align-items: start;
-        align-self: center;
-      }
-
-      .event .date, .stream .date {
-        flex-direction: column;
-      }
-
-      .event .card-content {
-        padding: 0;
-        display: flex;
-      }
-
-      .event .card-content .content {
-        padding: 1.5em 1.5rem 0.5em 1.5em;
-        margin-bottom: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-      }
-
-      .event .card-content img {
-        object-fit: cover;
-        padding: 12px 12px 0 0;
-        width: 100%;
-        overflow: hidden;
-      }
-
-      .date .mobile-separator {
-        display: none;
-      }
-
-      .login {
-        width: 90%;
-        position: relative;
-        margin: auto;
-      }
-
-      .user-info .pfp img {
-        padding: 3px;
-      }
-
-      .warning-message {
-        background-color: #FFF4E5;
-        border: 1px solid #FFA726;
-        border-radius: 8px;
-        padding: 10px 15px;
-        font-size: 0.85em;
-        margin: 10px auto;
-        color: #AE6800;
-    }
-
-      .monitor-status {
-        width: 100%;
-        top: -0.1em;
-        position: relative;
-      }
-
-      .monitor-status .tag {
-          width: 100%;
-          border-radius: unset;
-      }
-
-      @media (min-width: 769px) {
-        .event .card-content {
-          background-image: none !important;
-        }
-      }
-
-      @media (max-width: 769px) {
-
-        .event, .stream {
-          margin-bottom: 0;
-        }
-
-        .stream .image img {
-          border-radius: 6px;
-        }
-
-        .stream .card-header-title {
-          align-items: center;
-          align-self: center;
-        }
-
-        .stream .card-header-title p {
-          text-align: center;
-        }
-
-        .event .card-header, .stream .card-header {
-          flex-direction: column;
-          align-items: center;
-        }
-
-        .event .card-header .tags {
-          flex-direction: column;
-          align-items: center;
-        }
-
-        .event .date, .stream .date {
-          flex-direction: row;
-        }
-
-        .event .card-content {
-          margin: 0;
-          color: #fff;
-          background-size: cover;
-          background-repeat: no-repeat;
-        }
-
-        .event .card-content .content {
-          background-color: #0009;
-          width: 100%;
-        }
-
-        .event .card-content .content a {
-          color: #b4c1ff;
-        }
-
-        .event .card-content .content a:hover {
-          color: #939393;
-        }
-
-        .event .card-content .content .subtitle {
-          color: #fff;
-        }
-
-        .event .card-content img {
-          display: none;
-        }
-
-        .date .mobile-separator {
-          display: inline;
-          padding: 0 5px;
-        }
-      }
-    </style>
-</head>
-
-<body>
-
-    <section class="hero is-small is-link">
-        <div class="hero-body">
-          <div class="columns">
-            <div class="column is-12">
-              <div class="container content">
-                <img class="logo is-hidden-mobile" src="data:image/jpeg;base64,{{ userlogo | safe }}">
-                <h1 class="title">Resonite Communities</h1>
-                <h2 class="subtitle"><strong>Non</strong> Exhaustive Communites Events Aggregator</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="container box user-info login is-flex">
-        {% if user %}
-          <div class="is-flex is-flex-direction-column m-1">
-            <figure class="image pfp is-96x96 m-1">
-              <img class="is-rounded has-background-info" src='{{user.avatar_url}}' />
-            </figure>
-            <a class="button m-1" href="/logout/">Logout</a>
-          </div>
-          <div class="is-flex-direction-column m-1">
-            <p class="m-1">Connected as <span class="tag has-text-info">{{user.name}}</span></p>
-            {% if user_communities %}
-            <p class="ml-1 mr-1 mt-1">The calendar also include the events from communities you are a member of:</p>
-                <div>
-                {% for user_guild in user_communities %}
-                    <span class="tag is-info m-1">{{ user_guild.name }}</span>
-                {% endfor %}
-                </div>
-                {% if retry_after %}
-                <div class="warning-message">
-                    Some communities have not been checked, please try to logout and then login again in {{ retry_after|format_seconds}}.
-                </div>
-                {% endif %}
-            {% else %}
-            <p class="m-1">You are not part of any communities with private events sadly.</p>
-            {% endif %}
-
-          </div>
-        {% else %}
-          <div class="container has-text-centered">
-              <p class="m-1">To see private events from communities you are part of you must login.</p>
-              <a href="{{ discord_auth_url }}" class="button is-info">
-                  Login with Discord
-              </a>
-          </div>
-        {% endif %}
-        </div>
-
-        <div class="hero-foot">
-          <nav class="tabs is-boxed is-fullwidth is-large">
-            <div class="container">
-              <ul>
-                <li class="tab tab-events {{tab|tab_is_active('Events')}}" onclick="openTab(event,'Events')"><a href="/resonite_communities/client/web_client/static">Events</a></li>
-                <li class="tab tab-streams {{tab|tab_is_active('Streams')}}" onclick="openTab(event,'Streams')"><a href="/streams">Streams</a></li>
-                <li class="tab tab-about {{tab|tab_is_active('About')}}" onclick="openTab(event,'About')"><a href="/about">About</a></li>
-              </ul>
-            </div>
-          </nav>
-        </div>
-      </section>
-
-
-    <section class="section" style="min-height: 62vh">
-        <div class="container">
-
+{% extends "base.html" %}
+{% block content %}
           <div id="Events" class="content-tab" style="display:{{tab|tab_display('Events')}}">
 
             <div class="columns">
@@ -717,51 +465,10 @@
               </div>
             </div>
           </div>
+{% endblock %}
 
-        </div>
-
-
-    </section>
-
-  <footer class="footer">
-    <div class="content has-text-centered">
-      <p>
-        <strong>Resonite communites</strong> by GrayBoltWolf and <a href="https://brodokk.space">Brodokk</a>.
-        Website and API <a href="https://github.com/Resonite-Community-Projects/community_events.resonite">source code</a>.
-      </p>
-    </div>
-  </footer>
-
+{% block script %}
   <script>
-    // Tab management
-    var tablinks;
-    tablinks = document.getElementsByClassName("tab");
-    for (i = 0; i < tablinks.length; i++) {
-      tablinks[i].children[0].removeAttribute("href");
-    }
-    function openTab(evt, tabName) {
-      var i, x, tablinks;
-      x = document.getElementsByClassName("content-tab");
-      for (i = 0; i < x.length; i++) {
-        x[i].style.display = "none";
-      }
-      tablinks = document.getElementsByClassName("tab");
-      for (i = 0; i < x.length; i++) {
-        tablinks[i].className = tablinks[i].className.replace(" is-active", "");
-      }
-      document.getElementById(tabName).style.display = "block";
-      if (evt.currentTarget.constructor.name != "HTMLLIElement") {
-        target = document.getElementsByClassName("tab-"+tabName.toLowerCase())[0]
-      } else {
-        target = evt.currentTarget
-      }
-      target.className += " is-active";
-      url = '/'
-      if (tabName.toLowerCase() != "events") {
-        url += tabName.toLowerCase();
-      }
-      window.history.pushState('resonite-communities.com', 'resonite-communities.com', url);
-    }
 
     // Manage info toggle
     window.addEventListener('resize', info_toggle);
@@ -887,5 +594,5 @@
     });
 
   </script>
-</body>
-</html>
+
+{% endblock %}
